--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -104,6 +104,73 @@ body {
     font-size: 1.2rem;
 }
 
+.show-answers {
+    color: #2e77d0;
+    font-weight: bold;
+    cursor: pointer;
+    border: 2px solid #2e77d0;
+    letter-spacing: 1px;
+    width: 200px;
+    margin: auto;
+    padding: 5px;
+    overflow: hidden;
+    position: relative;
+    &:before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0%;
+        height: 100%;
+        background-color: #2e77d0;
+        transition: all .4s;
+        z-index: -1;
+    }
+    &:hover {
+        color: #fff;
+        &:before {
+            width: 100%;
+        }
+    }
+}
+
+.modal-answers {
+    .modal-content {
+        border: none;
+    }
+    
+    .modal-header {
+        background: #2e77d0;
+        color: white;
+        border: none;
+        button {
+            color: white;
+            &:hover {
+                color: white;
+            }
+        }
+    }
+    
+    .modal-title {
+        text-align: center;
+        display: block;
+        width: 100%;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+    }
+    
+    .modal-body {
+        ul {
+            padding: 0;
+            list-style: none;
+            li {
+                margin-bottom: 10px;
+            }
+        }
+    }
+}
+
+
 @media all and (max-width: 767px) { 
     .btn-basic:hover {
         transform: none;
